--- a/css/circuit.css
+++ b/css/circuit.css
@@ -3,20 +3,24 @@
 }
 
 /* Style the Image Used to Trigger the Modal */
-#myImg {
+#img-circuit {
+	border: 1px solid lightgrey;
     border-radius: 5px;
+    padding: 5px;
     cursor: pointer;
     transition: 0.3s;
 }
 
-#myImg:hover {opacity: 0.7;}
+#img-circuit:hover {
+	opacity: 0.5;
+}
 
 /* The Modal (background) */
 .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
+    padding-top: 70px; /* Location of the box */
     margin-top: 50px;
     left: 0;
     top: 0;
@@ -32,7 +36,7 @@
     margin: auto;
     display: block;
     width: 80%;
-    max-width: 700px;
+    max-width: 1000px;
 }
 
 /* Caption of Modal Image (Image Text) - Same Width as the Image */
@@ -40,7 +44,7 @@
     margin: auto;
     display: block;
     width: 80%;
-    max-width: 700px;
+    max-width: 1000px;
     text-align: center;
     color: #ccc;
     padding: 10px 0;
@@ -66,8 +70,13 @@
 }
 
 /* 100% Image Width on Smaller Screens */
-@media only screen and (max-width: 700px){
+@media only screen and (max-width: 1200px){
     .modal-content {
         width: 100%;
     }
+}
+
+#list-comp {
+	margin-top: auto;
+	margin-bottom: auto;
 }
