--- a/css/circuit.css
+++ b/css/circuit.css
@@ -1,7 +1,3 @@
-body {
-    margin-bottom: 100px;
-}
-
 h1 {
 
 }
@@ -17,11 +13,21 @@ figcaption {
 
 #main {
     margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 #list-comp {
     margin-top: auto;
     margin-bottom: auto;
+}
+
+
+
+
+/* Footer */
+.navbar-static-bottom {
+    margin-bottom: 0;
+    border-radius: 0;
 }
 
 
