--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,18 @@
 body {
   padding-top: 50px;
-  margin-bottom: 100px;
+  background-color: #F4F6EA
+}
+
+#main {
+  margin-bottom: 40px;
 }
 
 .jumbotron {
-  background: url("http://placehold.it/350x150") no-repeat center center;
-  background-size: 100% 100%;
+  background: url(../imgs/jumbotron.jpg) no-repeat center center;
+  background-size: cover;
   padding-top: 15%;
+
+  color: #FFF;
 }
 
 .hline {
@@ -16,4 +22,62 @@ body {
     border-top: 1px solid #ccc;
     margin: 1em 0;
     padding: 0;
+}
+
+
+
+/* Button */
+
+.btn-info {
+  background-color: #748265;
+  border-color: #748265
+}
+
+.btn-info:hover {
+  background-color: #509548;
+  border-color: #509548;
+}
+
+
+
+
+/* Navbar */
+
+.navbar {
+  background-color: #19381F;  
+  border: 0;
+}
+
+#navbar-top {
+  box-shadow: 0px 6px 136px 19px rgba(0,0,0,0.5);
+}
+
+.navbar-brand {
+  color: #fff;
+}
+
+.navbar-brand:hover {
+  color: #8DBA8D;
+}
+
+.navbar .navbar-nav>li>a {
+  color: #FFF;
+}
+
+.navbar .navbar-nav>li>a:hover {
+  background-color: #102414;
+  color: #8DBA8D;
+}
+
+.active {
+  background-color: #102414;
+}
+
+
+/* Footer */
+.navbar-static-bottom {
+    margin-bottom: 0;
+    border-radius: 0;
+    box-shadow: inset 0px 11px 52px -13px rgba(0,0,0,0.5);
+
 }
