--- a/css/main.css
+++ b/css/main.css
@@ -18,12 +18,8 @@ a:hover {
 /* Navbar */
 
 .navbar {
-  background-color: #19381F;  
+  background-color: #19381F;
   border: 0;
-}
-
-#navbar-top {
-  box-shadow: 0px 6px 136px 19px rgba(0,0,0,0.5);
 }
 
 .navbar-brand {
@@ -45,6 +41,15 @@ a:hover {
 
 .active {
   background-color: #102414;
+}
+
+.navbar-toggle {
+    border: 1px solid #666;
+    border-radius: 5px;
+}
+
+.icon-bar {
+    background-color: #DDD;
 }
 
 
